[gd_scene load_steps=7 format=3 uid="uid://cfwkpsbxknvwn"]

[ext_resource type="Script" uid="uid://clwakw2d32yap" path="res://src/ui/screens/upgrades_screen.gd" id="1_5k4m3"]
[ext_resource type="PackedScene" uid="uid://clk13i3hwoyi3" path="res://src/ui/screens/bogatie/bogatie.tscn" id="2_gkrrk"]
[ext_resource type="Theme" uid="uid://cm6paiulktuae" path="res://src/ui/theme/base.tres" id="3_sjey8"]

[sub_resource type="Gradient" id="Gradient_k0060"]
offsets = PackedFloat32Array(0, 0.426426, 1)
colors = PackedColorArray(0.333333, 0.72549, 0.639216, 1, 0.30045, 0.553675, 0.518461, 1, 0.305882, 0.65098, 0.603922, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vvk1j"]
fractal_lacunarity = 4.365
fractal_gain = 0.48
domain_warp_fractal_lacunarity = 7.525

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_sjey8"]
color_ramp = SubResource("Gradient_k0060")
noise = SubResource("FastNoiseLite_vvk1j")

[node name="UpgradesScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5k4m3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -594.0
offset_top = -61.0
offset_right = 1714.0
offset_bottom = 2994.0
texture = SubResource("NoiseTexture2D_sjey8")
metadata/_edit_lock_ = true

[node name="Bogatie" parent="." instance=ExtResource("2_gkrrk")]
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 117.0
grow_horizontal = 2
theme = ExtResource("3_sjey8")
theme_override_font_sizes/font_size = 48
text = "Upgrades"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_sjey8")
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 181.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradesList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FuelUpgrades" type="VBoxContainer" parent="ScrollContainer/UpgradesList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/FuelUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
theme_override_font_sizes/font_size = 24
text = "Fuel Upgrades"

[node name="FuelTankSize" type="HBoxContainer" parent="ScrollContainer/UpgradesList/FuelUpgrades"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/FuelUpgrades/FuelTankSize"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Fuel Tank Size"

[node name="UpgradeButton" type="Button" parent="ScrollContainer/UpgradesList/FuelUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (100 coins)"

[node name="CarUpgrades" type="VBoxContainer" parent="ScrollContainer/UpgradesList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/CarUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
theme_override_font_sizes/font_size = 24
text = "Car Upgrades"

[node name="Speed" type="HBoxContainer" parent="ScrollContainer/UpgradesList/CarUpgrades"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/CarUpgrades/Speed"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Speed"

[node name="UpgradeButton" type="Button" parent="ScrollContainer/UpgradesList/CarUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (200 coins)"

[node name="Handling" type="HBoxContainer" parent="ScrollContainer/UpgradesList/CarUpgrades"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/CarUpgrades/Handling"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Handling"

[node name="UpgradeButton2" type="Button" parent="ScrollContainer/UpgradesList/CarUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (175 coins)"

[node name="WeaponUpgrades" type="VBoxContainer" parent="ScrollContainer/UpgradesList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/WeaponUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
theme_override_font_sizes/font_size = 24
text = "Weapon Upgrades"

[node name="FireRate" type="HBoxContainer" parent="ScrollContainer/UpgradesList/WeaponUpgrades"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/WeaponUpgrades/FireRate"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Fire Rate"

[node name="UpgradeButton" type="Button" parent="ScrollContainer/UpgradesList/WeaponUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (250 coins)"

[node name="ProjectileSpeed" type="HBoxContainer" parent="ScrollContainer/UpgradesList/WeaponUpgrades"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/WeaponUpgrades/ProjectileSpeed"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Projectile Speed"

[node name="UpgradeButton2" type="Button" parent="ScrollContainer/UpgradesList/WeaponUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (200 coins)"

[node name="PowerUps" type="VBoxContainer" parent="ScrollContainer/UpgradesList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/PowerUps"]
layout_mode = 2
theme = ExtResource("3_sjey8")
theme_override_font_sizes/font_size = 24
text = "Power Ups"

[node name="PowerUpSlot" type="HBoxContainer" parent="ScrollContainer/UpgradesList/PowerUps"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/PowerUps/PowerUpSlot"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Additional Slot"

[node name="UpgradeButton" type="Button" parent="ScrollContainer/UpgradesList/PowerUps"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (300 coins)"

[node name="GameUpgrades" type="VBoxContainer" parent="ScrollContainer/UpgradesList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/GameUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
theme_override_font_sizes/font_size = 24
text = "Game Upgrades"

[node name="RunTime" type="HBoxContainer" parent="ScrollContainer/UpgradesList/GameUpgrades"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/UpgradesList/GameUpgrades/RunTime"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Run Time"

[node name="UpgradeButton" type="Button" parent="ScrollContainer/UpgradesList/GameUpgrades"]
layout_mode = 2
theme = ExtResource("3_sjey8")
text = "Upgrade (225 coins)"

[node name="TotalCoins" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -168.0
offset_right = 102.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_sjey8")
text = "Coins: 0"
horizontal_alignment = 1
